add UserSearch in textarea

--- a/src/app/mainscreen/message/message-create/message-create.component.html
+++ b/src/app/mainscreen/message/message-create/message-create.component.html
@@ -2,24 +2,24 @@
 <div class="msg-create-container">
     <div class='option-icons'>
         <div class="msg-mods">
-        <img src="assets/img/icons/add.svg">
-        <img src="assets/img/icons/addreaction.svg" (click)="toggleEmojiBar($event)">
-        <img src="assets/img/icons/alternateemail.svg">
+            <img src="assets/img/icons/add.svg">
+            <img src="assets/img/icons/addreaction.svg" (click)="toggleEmojiBar($event)">
+            <img src="assets/img/icons/alternateemail.svg" (click)="toogleUserSearch()">
+        </div>
+        <div class="msg-send">
+            <img src="assets/img/icons/send.svg" (click)="createMessage()">
+        </div>
     </div>
-    <div class="msg-send">
-        <img src="assets/img/icons/send.svg" (click)="createMessage()">
+    <div>
+        <textarea cdkTextareaAutosize #messageCreate class="msg-write-container" [(ngModel)]="message.content"
+            *ngIf="channelFirebaseService.selectedChannel" placeholder="{{getPlaceholder()}}" (click)="closeEmojiBar()"
+            (keyup)="checkForAt($event)">
+        </textarea>
+        <div id="inputFieldUserSearch" *ngIf="showUserSearch">
+            <p *ngFor="let resultUsers of searchResultsUsers; index as i" (click)="clickUser(i)"> 
+                <img src="assets/img/icons/accountIcon.png" alt="UserIcon">  
+                &nbsp;- {{resultUsers.fullName}} ( {{resultUsers.id}} )
+            </p>
+        </div>
     </div>
-    </div>    
-<textarea cdkTextareaAutosize #messageCreate
-    class="msg-write-container" 
-    [(ngModel)]="message.content"
-    *ngIf="channelFirebaseService.selectedChannel"
-    placeholder="{{getPlaceholder()}}"
-    (click)="closeEmojiBar()">
-</textarea>
 </div>
-
-
-
-
-
