relocated user-search

--- a/src/app/mainscreen/sidenav/sidenav.component.html
+++ b/src/app/mainscreen/sidenav/sidenav.component.html
@@ -64,6 +64,16 @@
             </div>
         </div>
 
+        <div class="addChannel">
+            <img class="pad-right17" src="/assets/img/icons/add_circle.png">
+            Leute hinzufügen
+        </div>
+
+        <!--
+            <app-user-search *ngIf="showUserSearch" [message]="message" (userName)="handleUserSearchResult($event)"></app-user-search>
+        -->
+        
+
     </div>
 
 </mat-card>
