--- a/src/app/mainscreen/mainscreen.component.scss
+++ b/src/app/mainscreen/mainscreen.component.scss
@@ -18,7 +18,7 @@ app-channel{
         display: flex;
         justify-content: space-between;
         gap:12px; 
-        height: 100%;
+        height: calc(100% - 100px);
         #main-sidebar{
            width: $sideNav-width;
         }
