--- a/src/app/mainscreen/message/message-create/message-create.component.html
+++ b/src/app/mainscreen/message/message-create/message-create.component.html
@@ -1,5 +1,5 @@
 <app-addreaction *ngIf="showEmojiBar" (emojiSelectedOutput)="handleEmojiSelection($event)"></app-addreaction>
-<app-user-search *ngIf="showUserSearch" [message]="message" (userName)="handleUserSearchResult($event)"></app-user-search>
+<app-user-search *ngIf="showUserSearch" [searchValue]="searchValue" (userName)="handleUserSearchResult($event)"></app-user-search>
 <div class="msg-create-container">
     <div class='option-icons'>
         <div class="msg-mods">
@@ -15,7 +15,7 @@
     <div>
         <textarea #textInput cdkTextareaAutosize #messageCreate class="msg-write-container" [(ngModel)]="message.content"
             *ngIf="channelFirebaseService.selectedChannel" placeholder="{{getPlaceholder()}}" (click)="closeEmojiBar()"
-            (keyup)="toogleUserSearch($event)">
+            (keyup)="checkForAt()">
         </textarea>
     </div>
 </div>
