--- a/src/app/mainscreen/user-search/user-search.component.html
+++ b/src/app/mainscreen/user-search/user-search.component.html
@@ -1,4 +1,4 @@
-<div #inputFieldUserSearch id="inputFieldUserSearch">
+<div #inputFieldUserSearch id="inputFieldUserSearch" class="user-search">
     <p *ngFor="let resultUsers of searchResultsUsers; index as i" (click)="clickUser(i)">
         <img src="assets/img/icons/accountIcon.png" alt="UserIcon">
         &nbsp;- {{resultUsers.fullName}} ( {{resultUsers.id}} )
