--- a/src/app/mainscreen/sidenav/sidenav.component.scss
+++ b/src/app/mainscreen/sidenav/sidenav.component.scss
@@ -121,7 +121,7 @@
     margin-top: 8px;
 
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     &:hover {
