update UserProfil Add Status

--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -16,9 +16,8 @@
 </div>
 
 <div *ngIf="userProfilOpen">
-    <app-user-profil></app-user-profil>
+    <app-user-profil [user]="userProfilUser"></app-user-profil>
 </div>
-
 
 <!--
 EXAMPLE MESSAGE OUTPUT
