--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -7,7 +7,7 @@
     <img src="{{ autorAvatar }}" class="message-img" *ngIf="autorAvatar">
     <div class="message-content" tabindex="0">
         <div class="message-head">
-            <div *ngIf="autorName!=''"><b>{{ autorName }}</b></div>
+            <div *ngIf="autorName!=''"><b class="message-username" (click)="openUserProfil()">{{ autorName }}</b></div>
             <div> {{ getTimestamp(_message.timestamp) }}</div>
         </div>
 
