--- a/src/app/mainscreen/user-profil/user-profil.component.scss
+++ b/src/app/mainscreen/user-profil/user-profil.component.scss
@@ -13,8 +13,9 @@
 
     #UserProfilCard {
 
-        width: 300px;
-        height: 600px;
+        min-width: 100px;
+        max-width: 500px;
+        min-height: 100px;
         background-color: white;
         border-radius: 30px;
         padding: 24px;
