--- a/src/app/mainscreen/message/message-create/message-create.component.scss
+++ b/src/app/mainscreen/message/message-create/message-create.component.scss
@@ -62,13 +62,28 @@
     display: flex;
     align-items: flex-end;
 }
+
+
 .preview-file {
-    display: flex;
-    height: 60px;
+    display: block;
+    max-height: 60px;
+    max-width: 60px;
     object-fit: cover;
     padding-left: 30px;
 
     img{
         border-radius: 30%;
+        width: 60px;
+        height: 60px;
     }
+  }
+
+
+  .close-red-icon{
+    display: flex;
+    position: absolute;
+    height: 20px !important;
+    top: -6px;
+    left: 130px;
+    cursor: pointer;
   }
