--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -12,8 +12,13 @@
         </div>
 
         <mat-card *ngIf="!editMessage">
-            <mat-card-content>{{ _message.content }}</mat-card-content>
-        </mat-card>
+            <mat-card-content>
+              {{ _message.content }}
+              <ng-container *ngIf="_message.fileSrc">
+                <img [src]="_message.fileSrc" alt="File Preview" style="max-width: 100%; max-height: 200px;">
+              </ng-container>
+            </mat-card-content>
+          </mat-card>
 
         <app-addreaction *ngIf="showMessageReactions && !editMessage" [isOpened]="showMessageReactions"
             (emojiSelectedOutput)="handleEmojiSelection($event)">
