--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -15,10 +15,13 @@
             <mat-card-content>
               {{ _message.content }}
               <ng-container *ngIf="_message.fileSrc">
-                <img [src]="_message.fileSrc" alt="File Preview" style="max-width: 100%; max-height: 200px;">
+                <a [href]="_message.fileSrc" download="{{_message.fileSrc || 'downloaded_file'}}">
+                  <img [src]="_message.fileSrc" alt="File Preview" style="max-width: 100%; max-height: 200px;">
+                </a>
               </ng-container>
+              
             </mat-card-content>
-          </mat-card>
+        </mat-card>
 
         <app-addreaction *ngIf="showMessageReactions && !editMessage" [isOpened]="showMessageReactions"
             (emojiSelectedOutput)="handleEmojiSelection($event)">
