--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,11 @@ textarea {
     }
 }
 
+
+.highlighted {
+    background-color: yellow;
+  }
+  .highlight-container {
+    margin-top: 10px;
+  }
+
