message now createble if no content given but a file

--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -1,4 +1,4 @@
-<div id="main-container" *ngIf="channelFirebaseService.loadedChannels">
+<div id="main-container">
     
     <app-header id="main-header"></app-header>
     
