updated loaded Data on Login; fixed bug incomplete channel selection

--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -55,5 +55,5 @@
         </app-date-line>
     </div>
 
-    <app-message-create [path]="messagePath" [currentLocation]="'channel'"></app-message-create>
+    <app-message-create [path]="this.channelFirebaseService.currentChannelMessagePath" [currentLocation]="'channel'"></app-message-create>
 </mat-card>
