--- a/src/app/mainscreen/header/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/header/searchbar/searchbar.component.html
@@ -1,15 +1,20 @@
 <div id="header-searchfield-container">
-    <input id="header-searchfield" type="text" [(ngModel)]="searchText" placeholder="Code learning durchsuchen" (keyup)="sendData($event)">
-    <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search">
+    <input id="header-searchfield" 
+    type="text" [(ngModel)]="searchText" 
+    placeholder="Code learning durchsuchen" 
+    [mentionConfig]="mentionConfig">
+    <img id="header-searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search" >
 </div>
-<div id="header-searchfield-results" *ngIf="searchResults.length >= 1 || searchResultsUsers.length >= 1  || searchResultsChannels.length >= 1">
-<!--     <p *ngFor="let result of searchResults; index as i">{{result}}</p>-->    
-    <p *ngFor="let resultUsers of searchResultsUsers; index as i" (click)="clickUser(i)"> 
-        <img src="assets/img/icons/accountIcon.png" alt="UserIcon">  
-        &nbsp;- {{resultUsers.fullName}} ( {{resultUsers.id}} )
-    </p>
-    <p *ngFor="let resultChannels of searchResultsChannels; index as i" (click)="clickChannel(i)"> 
-        <img src="assets/img/icons/workspaces.png" alt="ChannelIcon"> 
-        &nbsp;- {{resultChannels.channelName}} ( {{resultChannels.id}} )
-    </p>
+
+<!--
+<div id="header-searchfield-results" *ngIf="searchResults.length >= 1 || searchResultsUsers.length >= 1  || searchResultsChannels.length >= 1">  
+<p *ngFor="let resultUsers of searchResultsUsers; index as i" (click)="clickUser(i)"> 
+    <img src="assets/img/icons/accountIcon.png" alt="UserIcon">  
+    &nbsp;- {{resultUsers.fullName}} ( {{resultUsers.id}} )
+</p>
+<p *ngFor="let resultChannels of searchResultsChannels; index as i" (click)="clickChannel(i)"> 
+    <img src="assets/img/icons/workspaces.png" alt="ChannelIcon"> 
+    &nbsp;- {{resultChannels.channelName}} ( {{resultChannels.id}} )
+</p>
 </div>
+-->
