--- a/src/app/mainscreen/message/message-create/message-create.component.scss
+++ b/src/app/mainscreen/message/message-create/message-create.component.scss
@@ -24,7 +24,7 @@
 
     .msg-write-container {
         width: 100%;
-        margin-bottom: 36px;
+        margin-bottom: 60px;
         border: none;
         min-height: 30px;
 
@@ -65,11 +65,13 @@
 
 
 .preview-file {
-    display: block;
+    display: flex;
     max-height: 60px;
     max-width: 60px;
     object-fit: cover;
     padding-left: 30px;
+    align-items: flex-end;
+    gap: 5px;
 
     img{
         border-radius: 30%;
