--- a/src/app/startscreen/avatar-choose/avatar-choose.component.html
+++ b/src/app/startscreen/avatar-choose/avatar-choose.component.html
@@ -7,31 +7,37 @@
       <h1>Wähle deinen Avatar</h1>
     </div>
     <div class="avatar-box">
-      <img [src]="user.avatar">
+      <img [src]="user.avatar" />
     </div>
     <span>{{ userService.currentUser.fullName }}</span>
-   
+
     <div class="choose-avatar-container">
-      <div class="choose-avatar-text-box">
-        Aus der Liste wählen
-      </div>
+      <div class="choose-avatar-text-box">Aus der Liste wählen</div>
       <div class="choose-avatar-box" *ngFor="let avatar of avatars">
-        <img [src]="'assets/img/avatar/'+ avatar" (click)="selectAvatar(avatar)">
-    </div>
+        <img
+          [src]="'assets/img/avatar/' + avatar"
+          (click)="selectAvatar(avatar)"
+        />
+      </div>
     </div>
   </div>
 
- <div class="choose-avatar-upload-container">
-  eigenes Bild verwenden
-  <label for="fileUpload" class="white-button">
-    Datei hochladen 
-  </label>
-  <input id="fileUpload" type="file" accept="image/*" #upload (change)="uploadFile(upload)" style="display: none;">
-</div>
-  
+  <div class="choose-avatar-upload-container">
+    eigenes Bild verwenden
+    <label for="fileUpload" class="white-button"> Datei hochladen </label>
+    <input
+      id="fileUpload"
+      type="file"
+      accept="image/*"
+      #upload
+      (change)="uploadFile(upload)"
+      style="display: none"
+    />
+  </div>
 
   <div class="user-avatar-button-container">
-    <button (click)="onSubmitAvatar();"
+    <button
+      (click)="onSubmitAvatar()"
       class="blue-button"
       mat-raised-button
       color="primary"
@@ -39,8 +45,6 @@
       Weiter
     </button>
   </div>
-
-  
 </mat-card>
 
 <div *ngIf="avatarSubmitted" class="success-message">
