--- a/src/app/startscreen/forgot-password/forgot-password.component.scss
+++ b/src/app/startscreen/forgot-password/forgot-password.component.scss
@@ -33,7 +33,6 @@
   display: flex;
   flex-direction: column;
   max-width: 500px;
- 
 }
 
 .user-login-box {
@@ -64,14 +63,14 @@
   }
 }
 
-.warning-text, .warning-password{
-    display: flex;
-    width: 100%;
-    position: relative;
-    color: red;
-    top: -20px;
-    left: 0px;
-    
+.warning-text,
+.warning-password {
+  display: flex;
+  width: 100%;
+  position: relative;
+  color: red;
+  top: -20px;
+  left: 0px;
 }
 
 .user-login-icon {
@@ -82,17 +81,17 @@
   width: 50px;
 }
 .forgot-password-info-container {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    gap: 40px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 40px;
 }
 
 .forgot-password-info-box {
-   max-width: 350px;
-   text-align: center;
-   color: rgba(104, 104, 104, 1);
-   margin-top: 15px;
+  max-width: 350px;
+  text-align: center;
+  color: rgba(104, 104, 104, 1);
+  margin-top: 15px;
 }
 
 .forgot-password-button-container {
@@ -159,7 +158,7 @@
   color: rgba(255, 255, 255, 1);
   align-items: center;
   font-size: 36px;
-  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.20);
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
   animation: slide-in 0.4s ease-in-out, slide-out 0.4s ease-in-out 1.5s;
   font-weight: 700;
   gap: 28px;
