--- a/src/app/startscreen/login/login.component.html
+++ b/src/app/startscreen/login/login.component.html
@@ -81,9 +81,17 @@
           (blur)="isPasswordInputActive = false"
         />
         <div class="user-register-passwort-hide">
-          <img src="{{ isPasswordVisible ? showPasswordImage : hidePasswordImage }}" (click)="togglePasswordVisibility()" style="cursor: pointer" />
-          <span (click)="togglePasswordVisibility()" style="cursor: pointer"></span>
-
+          <img
+            src="{{
+              isPasswordVisible ? showPasswordImage : hidePasswordImage
+            }}"
+            (click)="togglePasswordVisibility()"
+            style="cursor: pointer"
+          />
+          <span
+            (click)="togglePasswordVisibility()"
+            style="cursor: pointer"
+          ></span>
         </div>
       </div>
       <div
@@ -98,10 +106,10 @@
           *ngIf="contactForm.controls['passwordInput'].hasError('minlength')"
           [ngClass]="{ 'warning-password': true }"
         >
-        {{ "*Gültiges Passwort eingeben." }}
+          {{ "*Gültiges Passwort eingeben." }}
         </span>
       </div>
-    
+
       <span class="user-login-password-restore">
         <a (click)="onForgotPasswordLinkClick()">Passwort vergessen ?</a>
       </span>
@@ -119,7 +127,7 @@
         <span (click)="loginWithGoogle()"> Anmeldung mit Google </span>
       </div>
       <span *ngIf="loginFailed" id="loginFailed-container">
-        {{loginErrorMessage}}
+        {{ loginErrorMessage }}
       </span>
 
       <div class="user-login-button-container">
