--- a/src/app/startscreen/login/login.component.scss
+++ b/src/app/startscreen/login/login.component.scss
@@ -1,200 +1,192 @@
 .user-login-container {
-    max-width: 606px;
-    padding: 50px 53px;
-    background: white;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  max-width: 606px;
+  padding: 50px 53px;
+  background: white;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
 }
 
 .user-login-title {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size: 20px;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 20px;
+  gap: 30px;
 
-    h1 {
-        font-size: 46px;
-        color: rgba(68, 77, 242, 1);
-        margin: 0px;
-    }
+  h1 {
+    font-size: 46px;
+    color: rgba(68, 77, 242, 1);
+    margin: 0px;
+  }
 }
 
 .user-login-input-container {
-    margin-top: 46px;
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
+  margin-top: 46px;
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
 }
 
-.user-login-box{
-    display: flex;
-    flex-direction: column;
-    max-height: 60px;
-    justify-content: center;
-    margin-bottom: 40px;
+.user-login-box {
+  display: flex;
+  flex-direction: column;
+  max-height: 60px;
+  justify-content: center;
+  margin-bottom: 40px;
 }
-
 
 .user-login-email,
-.user-login-password{
-    display: flex;
-    height: 100%;
-    border-radius: 100px;
-    background-color: rgba(236, 238, 254, 1);
-    font-size: 18px;
-    border: none;
-    padding: 18px 32px 18px 86px;
-    outline: none;
-    cursor: pointer;
+.user-login-password {
+  display: flex;
+  height: 100%;
+  border-radius: 100px;
+  background-color: rgba(236, 238, 254, 1);
+  font-size: 18px;
+  border: none;
+  padding: 18px 32px 18px 86px;
+  outline: none;
+  cursor: pointer;
 
-    &:hover{
-        border: 1px solid black;
-        
-    }
-    
-    &:focus{
-        border: 1px solid rgba(83, 90, 241, 1);
-    }
-    
+  &:hover {
+    border: 1px solid black;
+  }
+
+  &:focus {
+    border: 1px solid rgba(83, 90, 241, 1);
+  }
 }
 
-.user-login-icon{
-    display: flex;
-    position: relative;
-    left: 30px;
-    top: 41px;
-    width: 50px;
+.user-login-icon {
+  display: flex;
+  position: relative;
+  left: 30px;
+  top: 41px;
+  width: 50px;
 }
 
-.warning-text, .warning-password{
-    display: flex;
-    width: 100%;
-    position: relative;
-    color: red;
-    top: -20px;
-    left: 0px;
-    
+.warning-text,
+.warning-password {
+  display: flex;
+  width: 100%;
+  position: relative;
+  color: red;
+  top: -20px;
+  left: 0px;
 }
 
-.user-login-password-restore{
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 29px;
+.user-login-password-restore {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 29px;
 
-    a{
+  a {
     color: rgba(121, 126, 243, 1);
     text-decoration: none;
     padding: 5px 15px;
     font-size: 18px;
     cursor: pointer;
 
-    &:hover{
-        background-color: rgba(236, 238, 254, 1);
-        border-radius: 30px;
-        transition: background-color 0.15s ease-in-out;
+    &:hover {
+      background-color: rgba(236, 238, 254, 1);
+      border-radius: 30px;
+      transition: background-color 0.15s ease-in-out;
     }
-    }
+  }
 }
 
-.user-register-passwort-hide{
-    display: flex;
-    position: relative;
-    right: 15px;
-    top: -42px;
-    flex-direction: row-reverse;
-    height: 0.5px;
+.user-register-passwort-hide {
+  display: flex;
+  position: relative;
+  right: 15px;
+  top: -42px;
+  flex-direction: row-reverse;
+  height: 0.5px;
 
-    
-    img{
-        width: 24px;
-        height: 24px;
-    }
+  img {
+    width: 24px;
+    height: 24px;
+  }
 }
 
+.user-login-seperation {
+  display: flex;
+  text-align: center;
+  font-size: 18px;
+  align-items: center;
 
-
-
-.user-login-seperation{
-    display: flex;
-    text-align: center;
-    font-size: 18px;
-    align-items: center;
-
-    p{
-        margin: 0px 15px;
-    }
-    margin-bottom: 56px;
+  p {
+    margin: 0px 15px;
+  }
+  margin-bottom: 56px;
 }
 
-.user-seperation-bar{
-    width: 100%;
-    border-bottom: 1px solid rgba(173, 176, 217, 1);
+.user-seperation-bar {
+  width: 100%;
+  border-bottom: 1px solid rgba(173, 176, 217, 1);
 }
 
 .user-google-login {
-    display: flex;
-    background-color: rgb(236, 238, 254);
-    padding: 11px 32px;
-    border-radius: 100px;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 43px;
-    cursor: pointer;
-    font-size: 18px;
-    color: rgba(68, 77, 242, 1);
+  display: flex;
+  background-color: rgb(236, 238, 254);
+  padding: 11px 32px;
+  border-radius: 100px;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 43px;
+  cursor: pointer;
+  font-size: 18px;
+  color: rgba(68, 77, 242, 1);
 
-    &:hover {
-        border: 1px solid rgba(68, 77, 242, 1);
-        font-weight: bold;
-    }
+  &:hover {
+    border: 1px solid rgba(68, 77, 242, 1);
+    font-weight: bold;
+  }
 
-    &:active {
-        border: 1px solid black;
-        font-weight: 400;
-    }
+  &:active {
+    border: 1px solid black;
+    font-weight: 400;
+  }
 }
 
-.user-login-button-container{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+.user-login-button-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
 
-.blue-button{
-    border-radius: 25px;
-    padding: 12px 25px;
-    height: 49px;
-    font-size: 18px;
+.blue-button {
+  border-radius: 25px;
+  padding: 12px 25px;
+  height: 49px;
+  font-size: 18px;
+  background-color: rgba(68, 77, 242, 1) !important;
+
+  &:hover {
+    background-color: rgba(121, 126, 243, 1) !important;
+    transition: background-color 0.15s ease-in-out;
+  }
+}
+
+.white-button {
+  border-radius: 25px;
+  padding: 12px 25px;
+  height: 49px;
+  font-size: 18px;
+  border: 1px solid rgba(68, 77, 242, 1) !important ;
+
+  &:hover {
     background-color: rgba(68, 77, 242, 1) !important;
-
-    &:hover{
-        background-color: rgba(121, 126, 243, 1) !important;
-        transition: background-color 0.15s ease-in-out;
-    }
-}
-
-.white-button{
-    border-radius: 25px;
-    padding: 12px 25px;
-    height: 49px;
-    font-size: 18px;
-    border: 1px solid  rgba(68, 77, 242, 1) !important ;
-    
-
-    &:hover{
-        background-color: rgba(68, 77, 242, 1) !important;
-        transition: background-color 0.15s ease-in-out;
-        color: white;
-    }
+    transition: background-color 0.15s ease-in-out;
+    color: white;
+  }
 }
 
 .br-30 {
-    border-radius: 30px;
+  border-radius: 30px;
 }
 
-#loginFailed-container{
-    color: red;
-    text-align: center;
-    padding-bottom: 24px;
+#loginFailed-container {
+  color: red;
+  text-align: center;
+  padding-bottom: 24px;
 }
