--- a/src/app/startscreen/privacy-policy/privacy-policy.component.scss
+++ b/src/app/startscreen/privacy-policy/privacy-policy.component.scss
@@ -1,12 +1,14 @@
 .privacy-container {
-    padding: 48px 56px;
-    background: white;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    max-width: 800px;
- 
-    h1,h2,h3,h4{
-        color: rgba(68, 77, 242, 1);
-    }
+  padding: 48px 56px;
+  background: white;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  max-width: 800px;
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    color: rgba(68, 77, 242, 1);
+  }
 }
-  
