--- a/src/app/startscreen/reset-password/reset-password.component.scss
+++ b/src/app/startscreen/reset-password/reset-password.component.scss
@@ -4,14 +4,12 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-  h3{
-      margin: 0;
+  h3 {
+    margin: 0;
   }
-  
- 
 }
 
-.uper-startscreen-container{
+.uper-startscreen-container {
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -19,25 +17,23 @@
   align-items: center;
   padding-top: 75px;
   padding-bottom: 11px;
-
 }
-
 
 #startScreen-logo {
   display: flex;
   padding-left: 75px;
-  a{
+  a {
     text-decoration: none;
     color: rgba(121, 126, 243, 1);
     padding: 10px 15px;
     font-size: 18px;
     cursor: pointer;
 
-    &:hover{
-    border: 1px solid rgba(173, 176, 217, 1);
-    border-radius: 100px;
+    &:hover {
+      border: 1px solid rgba(173, 176, 217, 1);
+      border-radius: 100px;
     }
-}
+  }
 }
 
 #startScreen-register {
@@ -47,133 +43,126 @@
   padding-right: 75px;
 }
 
-
 #startscreen-imprint-container {
   display: flex;
   gap: 48px;
   padding-top: 68px;
   padding-bottom: 48px;
 
-  a{
+  a {
     text-decoration: none;
     color: rgba(121, 126, 243, 1);
     padding: 10px 15px;
     font-size: 18px;
     cursor: pointer;
 
-    &:hover{
-    border: 1px solid rgba(173, 176, 217, 1);
-    border-radius: 100px;
+    &:hover {
+      border: 1px solid rgba(173, 176, 217, 1);
+      border-radius: 100px;
     }
+  }
 }
-}
-
-
-
 
 .reset-password-container {
-    display: flex;
-    max-width: 692px;
-    padding: 40px 90px;
-    border-radius: 30px;
-    background: white;
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
-    align-items: center;
+  display: flex;
+  max-width: 692px;
+  padding: 40px 90px;
+  border-radius: 30px;
+  background: white;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  align-items: center;
+}
+
+.reset-password-title {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 20px;
+  gap: 40px;
+  align-items: center;
+
+  h1 {
+    font-size: 46px;
+    color: rgba(68, 77, 242, 1);
+    margin: 0px;
   }
-  
-  .reset-password-title {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size: 20px;
-    gap: 40px;
-    align-items: center;
-  
-    h1 {
-      font-size: 46px;
-      color: rgba(68, 77, 242, 1);
-      margin: 0px;
-    }
-  }
-  
-  .reset-password-icon {
-    position: absolute;
-    top: 60px;
-    left: 32px;
-    cursor: pointer;
+}
+
+.reset-password-icon {
+  position: absolute;
+  top: 60px;
+  left: 32px;
+  cursor: pointer;
+}
+
+.reset-passwort-input-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+  gap: 40px;
+  width: 400px;
+}
+
+.user-reset-box {
+  display: flex;
+  flex-direction: column;
+  max-height: 60px;
+  justify-content: center;
+}
+
+.user-input-password {
+  display: flex;
+  height: 100%;
+  border-radius: 100px;
+  background-color: rgba(236, 238, 254, 1);
+  font-size: 18px;
+  border: none;
+  padding: 18px 40px;
+  outline: none;
+  cursor: pointer;
+
+  &:hover {
+    border: 1px solid black;
   }
 
-  .reset-passwort-input-container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
-    gap: 40px;
-    width: 400px;
+  &:focus {
+    border: 1px solid rgba(83, 90, 241, 1);
   }
-  
-  
-  .user-reset-box {
-    display: flex;
-    flex-direction: column;
-    max-height: 60px;
-    justify-content: center;
-  }
-  
-  .user-input-password {
-    display: flex;
-    height: 100%;
-    border-radius: 100px;
-    background-color: rgba(236, 238, 254, 1);
-    font-size: 18px;
-    border: none;
-    padding: 18px 40px;
-    outline: none;
-    cursor: pointer;
-  
-    &:hover {
-      border: 1px solid black;
-    }
-  
-    &:focus {
-      border: 1px solid rgba(83, 90, 241, 1);
-    }
-  }
-  
-  .warning-text, .warning-password{
-      display: flex;
-      width: 100%;
-      position: relative;
-      color: red;
-      top: -20px;
-      left: 0px;
-      
-  }
-  
+}
 
-  .reset-password-button-container {
-    display: flex;
-    justify-content: flex-end;
-    gap: 30px;
+.warning-text,
+.warning-password {
+  display: flex;
+  width: 100%;
+  position: relative;
+  color: red;
+  top: -20px;
+  left: 0px;
+}
+
+.reset-password-button-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
+}
+
+.blue-button {
+  border-radius: 25px;
+  padding: 12px 25px;
+  height: 49px;
+  font-size: 18px;
+  background-color: rgba(68, 77, 242, 1) !important;
+  color: white !important;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba(121, 126, 243, 1) !important;
+    transition: background-color 0.15s ease-in-out;
   }
-  
-  .blue-button {
-    border-radius: 25px;
-    padding: 12px 25px;
-    height: 49px;
-    font-size: 18px;
-    background-color: rgba(68, 77, 242, 1) !important;
-    color: white !important;
-    cursor: pointer;
-  
-    &:hover {
-      background-color: rgba(121, 126, 243, 1) !important;
-      transition: background-color 0.15s ease-in-out;
-    }
-  
-    &.disabled-button {
-      background-color: gray !important;
-      color: white;
-      cursor: not-allowed;
-    }
+
+  &.disabled-button {
+    background-color: gray !important;
+    color: white;
+    cursor: not-allowed;
   }
-  
+}
