--- a/src/app/startscreen/startscreen.component.scss
+++ b/src/app/startscreen/startscreen.component.scss
@@ -16,10 +16,12 @@
     padding: 10px 15px;
     font-size: 18px;
     cursor: pointer;
+    border: 1px solid transparent;
 
     &:hover {
       border: 1px solid rgba(173, 176, 217, 1);
       border-radius: 100px;
+      
     }
   }
 }
@@ -46,9 +48,55 @@
   padding-right: 75px;
 }
 
+#startScreen-register-mobile{
+  display: none;
+}
+
 #startscreen-imprint-container {
   display: flex;
   gap: 48px;
   padding-top: 68px;
   padding-bottom: 48px;
+}
+
+
+@media screen and (max-width: 640px) {
+
+  #startScreen-register,
+  #startscreen-imprint-container{
+    display: none;
+  }
+
+  #startScreen-register-mobile{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 30px;
+    gap: 20px;
+    padding-bottom: 88px;
+    font-size: 18px;
+
+    a {
+      text-decoration: none;
+      color: rgba(121, 126, 243, 1);
+      padding: 7px 18px;
+      font-size: 18px;
+      border: 1px solid rgba(121, 126, 243, 1);
+      border-radius: 100px;
+      cursor: pointer;
+      font-weight: bold;
+      color: rgba(68, 77, 242, 1);
+    }
+  }
+
+  .uper-startscreen-container {
+    justify-content: center;
+    padding-top: 92px;
+    padding-bottom: 30px;
+  }
+  
+  #startScreen-logo {
+    padding-left: 0px;
+  }
+
 }
