--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,10 @@ textarea {
     font-family: 'Nunito', sans-serif;
 }
 
+button{
+    font-family: 'Nunito', sans-serif;
+}
+
 .br-30 {
     border-radius: 30px;
 }
