--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     
-    <app-login *ngIf="showLogin && !imprint && !privacyPolicy && !showAvatar && !showForgotPassword"(forgotPasswordLinkClick)="onForgotPasswordLinkClick()" style="width: 100%"></app-login>
+    <app-login *ngIf="showLogin && !imprint && !privacyPolicy && !showAvatar && !showForgotPassword"(forgotPasswordLinkClick)="onForgotPasswordLinkClick()" class="app-login"></app-login>
         <app-intro></app-intro>
         <app-register *ngIf="showRegister && !showLogin && !imprint && !privacyPolicy && !showAvatar" (closeRegisterView)="closeRegister()"></app-register>
         <app-avatar-choose *ngIf="showAvatar && !showLogin" (closeAvatarView)="closeAvatar()"></app-avatar-choose>
