--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,32 @@
     font-family: 'Nunito';
     src: url('assets/fonts/nunito-v26-latin-regular.woff2');
 }
+@font-face {
+    font-family: 'Nunito';
+    font-weight: 200;
+    font-style: normal;
+    src: url('assets/fonts/nunito-v26-latin-200.woff2');
+}
+@font-face {
+    font-family: 'Nunito';
+    font-weight: 300;
+    font-style: normal;
+    src: url('assets/fonts/nunito-v26-latin-300.woff2');
+}
+
+@font-face {
+    font-family: 'Nunito';
+    font-weight: 500;
+    font-style: normal;
+    src: url('assets/fonts/nunito-v26-latin-500.woff2');
+}
+
+@font-face {
+    font-family: 'Nunito';
+    font-weight: 600;
+    font-style: normal;
+    src: url('assets/fonts/nunito-v26-latin-600.woff2');
+}
 
 @font-face {
     font-family: 'Nunito Sans';
