--- a/src/app/mainscreen/sidenav/sidenav.component.html
+++ b/src/app/mainscreen/sidenav/sidenav.component.html
@@ -21,19 +21,20 @@
                 <img class="pad-right17 workspaces" src="/assets/img/icons/workspaces.png">
                 <h3 class="myChannelsHeaderText">Channels</h3>
             </div>
-            <button (click)="openDialog()" mat-icon-button class="add">
-                <mat-icon>
-                    <img class="addImage" src="/assets/img/icons/add.png">
-                </mat-icon>
+            <button (click)="openDialog()" mat-icon-button>
+                <mat-icon>add</mat-icon>
             </button>
-
         </div>
 
-        <div class="myChannelsDropdown" id="myChannelsDropdown" *ngIf="unpackChannels">
+        <div class="myChannelsDropdown pad-left60" id="myChannelsDropdown" *ngIf="unpackChannels">
 
             <div class="myChannels">
-                <div class="pad-left40" *ngFor=" let channel of channelFirebaseService.loadedChannels" (click)="channelFirebaseService.selectChannel(channel.id)">
-                    #{{ channel.channelName }}
+                <div class="myChannels-channel" 
+                    *ngFor=" let channel of channelFirebaseService.loadedChannels" 
+                    (click)="channelFirebaseService.selectChannel(channel.id)"
+                    [class.myChannels-channel-selected]="channelFirebaseService.getSelectedChannelID()===channel.id">
+                    <h2 class="myChannels-channel-icon">#</h2> 
+                    <h3 class="myChannels-channel-name">{{ channel.channelName }}</h3>
                 </div>
             </div>
 
@@ -64,10 +65,11 @@
             </div>
         </div>
 
-        <div class="addChannel">
+    
+      <!--   <div class="addChannel">
             <img class="pad-right17" src="/assets/img/icons/add_circle.png">
             Leute hinzufügen
-        </div>
+        </div> -->
 
         <!--
             <app-user-search *ngIf="showUserSearch" [message]="message" (userName)="handleUserSearchResult($event)"></app-user-search>
